
- the settings are now stored in a file named 'VPinballX.ini' located in the standard Windows location for application data: %AppData%/VPinballX/
  This file will be automatically created and initialized from existing settings if found in Windows registry. This change was made to:
  - allow per table settings,
  - allow easier edition (manually or by a third party application),
  - allow to use different settings by specifying a custom ini file on the command line (see CommandLineParameters.txt),
  - settings are the same and can be shared between Windows version of VPX and the standalone version (Linux, Mac, Android, iOS, Raspberry,...),
  - allow to see all the available settings at once (not so easy before, since there are a few hundreds of them),
  - allow easier collaboration by being able to share the setting file with bug reports.
  If a file with the exact same name as the one of the table file but with '.ini' extension is found along the table file, it will be used as a settings override for that table.

- remove Anti-Aliasing and Postprocessed Anti-Aliasing options from the table properties (and use an .ini based override instead)

- the application is now fully 'DPI aware'. This means that one can use multiple monitors at different DPI settings.
  This may require to adjust the position of windows on existing installs.

- add 2 new camera layout modes which work better for cabinets, and for anaglyph stereo (as well as other use cases) and allows:
  - to setup the player position in real word units, measuring from the bottom center of the playfield in centimeters. This should allow to have a single position corresponding to your size and play position for all your tables.
  - to setup the camera like a 'real' camera: there is no more layback but a view offset, the other properties being simply the inclination and the field of view.