@@ -22,6 +22,7 @@
 -ExtractVBS [filename]  Load, export table script and close
 
 -Ini [filename]         Use a custom settings file instead of loading it from the default location
+-TableIni [filename]    Use a custom table settings file. This option is only available in conjunction with a command which specifies a table filename like Play, Edit,...
 
 -c1 [customparam] .. -c9 [customparam]  Custom user parameters that can be accessed in the script via GetCustomParam(X)
 
